# PackingDensityOptimizer_Backend

./: CMakeLists.txt  README.md
CudaCircles/: Kernel2.h  Kernel3.h  RemoteCore.h  VecHelper.h
csrc/: Kernel2.cu  Kernel3.cu
src/: RemoteCore.cpp  Source.cpp
